--- a/app/src/illakiyam/res/values/strings.xml
+++ b/app/src/illakiyam/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">இலக்கியம்</string>
     <string name="json_file_name">illakiyam.json</string>
+    <string name="list_view_type">0</string>
     <string name="share_message">Please check this application.  This app is very good in Tamil books.  You can find the app in play store with the url http://play.google.com/store/apps/details?id=</string>
 </resources>
